--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to education policy or higher education rates among latinos. I am also interested in the amount of latinos that vote in elections.
+I am interested in exploring data related to education policy or higher education rates among Latinos. I am also interested in the amount of Latinos that vote in elections.
 
 ```{r}
 library(tidyverse)
